[package]
name = "baltic-ingest"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
aws-config = "1"
aws-sdk-dynamodb = "1"
aws-sdk-sqs = "1"
chrono = { version = "0.4", features = ["serde"] }
