[package]
name = "baltic-watch-ingest"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
# WebSockets
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
futures-util = "0.3"
# AWS SDK
aws-config = { version = "1.1", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1.1"
aws-sdk-sqs = "1.1"
